fix(YSP-1112): lower z-index for section nav menu
Reduced the z-index of the section navigation menu from 2 to 1 to resolve
potential stacking context issues with primary nav.

--- a/components/03-organisms/site-in-this-section/_site-in-this-section.scss
+++ b/components/03-organisms/site-in-this-section/_site-in-this-section.scss
@@ -133,7 +133,7 @@ $section-nav-component-themes: map.deep-get(tokens.$tokens, 'component-themes');
       display: flex;
       position: relative;
       background-color: var(--color-basic-white);
-      z-index: 2;
+      z-index: 1;
 
       &[aria-expanded='true'] {
         background-color: var(--color-gray-100);
